# firecracker

src/firecracker/src/api_server/: parsed_request.rs
src/firecracker/src/api_server/request/: crypto.rs  mod.rs  pmem.rs
src/firecracker/swagger/: firecracker.yaml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  resources.rs  rpc_interface.rs
src/vmm/src/device_manager/: mmio.rs
src/vmm/src/devices/virtio/: device.rs  mod.rs
src/vmm/src/devices/virtio/crypto/: device.rs  mod.rs  request.rs
src/vmm/src/devices/virtio/pmem/: device.rs  mod.rs  persist.rs  request.rs
src/vmm/src/vmm_config/: crypto.rs
src/vmm_config/: Cargo.toml  pmem.rs
src/vmm_config/src/: balloon.rs  boot_source.rs  crypto.rs  drive.rs  entropy.rs  instance_info.rs  lib.rs  machine_config.rs  metrics.rs  mmds.rs  net.rs  pmem.rs  rate_limiter.rs  snapshot.rs  vsock.rs
src/vmm_config/src/rate_limiter/: persist.rs
src/vmm_config/src/utils/: mod.rs  time.rs
tools/testing/integration_tests/functional/: test_pmem.py
