[package]
name = "vmm_config"
version = "0.1.0"
edition = "2021"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[lib]
name = "vmm_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
libc = "0.2.172"
thiserror = "1.0.61" # Using a recent version, adjust if needed
displaydoc = "0.2.5" # Using a recent version, adjust if needed
semver = { version = "1.0.26", features = ["serde"] }
linux-loader = "0.13.0"
memfd = "0.6.3" # For HugePageConfig related types
derive_more = "0.99.17"
timerfd = "1.2.0"

[dev-dependencies]
vmm = { path = "../vmm" } # Keep it as a dev-dependency for tests

[features]
gdb = []
kani = []